// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > custom deletion, addition, and renaming of models 1`] = `
{
  "enabled": true,
  "enabledModels": [
    "llama",
    "claude-2",
    "gpt-4-0125-preview",
  ],
  "serverModelLists": [
    {
      "abilities": {},
      "displayName": "llama",
      "enabled": true,
      "id": "llama",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": "claude-2",
      "enabled": true,
      "id": "claude-2",
      "type": "chat",
    },
    {
      "abilities": {
        "functionCall": true,
      },
      "contextWindowTokens": 128000,
      "description": "The latest GPT-4 Turbo model includes vision. Vision requests can use JSON mode and function calling. GPT-4 Turbo is an enhanced version that balances accuracy and efficiency for cost-effective multimodal tasks and real-time interactions.",
      "displayName": "gpt-4-32k",
      "enabled": true,
      "id": "gpt-4-0125-preview",
      "pricing": {
        "units": [
          {
            "name": "textInput",
            "rate": 10,
            "strategy": "fixed",
            "unit": "millionTokens",
          },
          {
            "name": "textOutput",
            "rate": 30,
            "strategy": "fixed",
            "unit": "millionTokens",
          },
        ],
      },
      "providerId": "openai",
      "source": "builtin",
      "type": "chat",
    },
  ],
}
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > should work correct with gpt-4 1`] = `
[
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 16384,
    "description": "GPT 3.5 Turbo for text generation and understanding; currently points to gpt-3.5-turbo-0125.",
    "displayName": "GPT-3.5 Turbo 1106",
    "enabled": true,
    "id": "gpt-3.5-turbo-1106",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 1,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 2,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "releasedAt": "2023-11-06",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 16384,
    "description": "GPT 3.5 Turbo for text generation and understanding; currently points to gpt-3.5-turbo-0125.",
    "displayName": "GPT-3.5 Turbo",
    "enabled": true,
    "id": "gpt-3.5-turbo",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 0.5,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 1.5,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 8192,
    "description": "GPT-4 provides a larger context window to handle longer inputs, suitable for broad information synthesis and data analysis.",
    "displayName": "GPT-4",
    "enabled": true,
    "id": "gpt-4",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 30,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 60,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 32768,
    "description": "GPT-4 provides a larger context window to handle longer inputs for scenarios needing broad information integration and data analysis.",
    "displayName": "GPT-4 32K",
    "enabled": true,
    "id": "gpt-4-32k",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 60,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 120,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 128000,
    "description": "The latest GPT-4 Turbo model includes vision. Vision requests can use JSON mode and function calling. GPT-4 Turbo is an enhanced version that balances accuracy and efficiency for cost-effective multimodal tasks and real-time interactions.",
    "displayName": "GPT-4 Turbo Preview 1106",
    "enabled": true,
    "id": "gpt-4-1106-preview",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 10,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 30,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {},
    "displayName": "gpt-4-vision",
    "enabled": true,
    "id": "gpt-4-vision",
    "type": "chat",
  },
]
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > show the hidden model 1`] = `
{
  "abilities": {
    "functionCall": true,
  },
  "contextWindowTokens": 128000,
  "description": "The latest GPT-4 Turbo model includes vision. Vision requests can use JSON mode and function calling. GPT-4 Turbo is an enhanced version that balances accuracy and efficiency for cost-effective multimodal tasks and real-time interactions.",
  "displayName": "GPT-4 Turbo Preview 1106",
  "enabled": true,
  "id": "gpt-4-1106-preview",
  "pricing": {
    "units": [
      {
        "name": "textInput",
        "rate": 10,
        "strategy": "fixed",
        "unit": "millionTokens",
      },
      {
        "name": "textOutput",
        "rate": 30,
        "strategy": "fixed",
        "unit": "millionTokens",
      },
    ],
  },
  "providerId": "openai",
  "source": "builtin",
  "type": "chat",
}
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENROUTER_MODEL_LIST > custom deletion, addition, and renaming of models 1`] = `
{
  "enabled": false,
  "enabledModels": [
    "meta-llama/llama-3.1-8b-instruct:free",
    "google/gemma-2-9b-it:free",
  ],
  "serverModelLists": [
    {
      "abilities": {},
      "displayName": "meta-llama/llama-3.1-8b-instruct:free",
      "enabled": true,
      "id": "meta-llama/llama-3.1-8b-instruct:free",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": "google/gemma-2-9b-it:free",
      "enabled": true,
      "id": "google/gemma-2-9b-it:free",
      "type": "chat",
    },
  ],
}
`;
